enrique_jimenez/session-01/exercise-03/wordpress-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-03
  labels:
    app: wordpress
    track: stable
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:4.9.4
          livenessProbe:
            httpGet:
              path: /wp-admin
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /wp-admin
              port: http
            initialDelaySeconds: 30
          ports:
            - containerPort: 80
              name: http
