enrique_jimenez/session-01/exercise-03/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: external-database
  namespace: exercise-03
spec:
  type: ExternalName
  externalName:  kubernetes-training.cfxyxg2jnovx.us-east-1.rds.amazonaws.com
