enrique_jimenez/session-01/exercise-03/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: exercise-03
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress
