enrique_jimenez/session-01/exercise-03/ingress-redirect.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-redirect
  namespace: exercise-03
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /wp-admin
spec:
  tls:
  - hosts:
    - wordpress-exercise-03.com
    secretName: tls-secret
  rules:
  - host: wordpress-exercise-03.com
    http:
      paths:
      - path: /my-custom-admin
        backend:
          serviceName: wordpress
          servicePort: 80
