enrique_jimenez/session-01/exercise-03/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: exercise-03
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  tls:
  - hosts:
    - wordpress-exercise-03.com
    secretName: tls-secret
  rules:
  - host: wordpress-exercise-03.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
